# bot-tg-agregate

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot-tg-agregate/: agregates.py  bot.py  config.py  db.py  enums.py  messages.py  run.py
